<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barcode</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="turn_beep_on">Turn beep on</string>
    <string name="turn_beep_off">Turn beep off</string>
    <string name="read_beep">Read Beep</string>
    <string name="goodbeep">Beep on successful read</string>
    <string name="powerupbeep">Beep on power-up</string>
    <string name="scan">Scan</string>
    <string name="empty"></string>
    <string name="set">Set</string>
    <string name="barcode_type_disable">Barcode type disable</string>
    <string name="disable_all_barcodes">Disable all barcodes</string>
    <string name="enable_all_barcodes">Enable all barcodes</string>
    <string name="disable_1D_barcodes">Disable 1D barcodes</string>
    <string name="enable_1D_barcodes">Enable 1D barcodes</string>
    <string name="disable_2D_barcodes">Disable 2D barcodes</string>
    <string name="enable_2D_barcodes">Enable 2D barcodes</string>
    <string name="self_prefix">Self Prefix</string>
    <string name="disable_self_prefix">Disable Self Prefix</string>
    <string name="enable_self_prefix">Enable Self Prefix</string>
    <string name="self_prefix_string">Self prefix string</string>
    <string name="set_prefix_string">Set Self Prefix</string>
    <string name="prefix_suffix_selection">Prefix and Suffix Selection</string>
    <string name="disable_prefix_suffix">Disable prefix and suffix</string>
    <string name="enable_prefix_suffix">Enable prefix and suffix</string>
    <string name="lighting">Lighting</string>
    <string name="lightingOff">Off</string>
    <string name="lightingOffText">Light stays off for duration of scan</string>
    <string name="lightingOn">On</string>
    <string name="lightingOnText">Light stays on for timed duration</string>
    <string name="lightingLow">Light low illumination</string>
    <string name="lightingLowText">Use low illumination setting, used for indoor scanning</string>
    <string name="lightingHigh">Light high illumination</string>
    <string name="lightingHighText">Use high illumination setting, used for outdoor scanning</string>
    <string name="aiming">Aiming</string>
    <string name="aimingFlash">Flash</string>
    <string name="aimingFlashText">Turns on aiming target light for about 500ms when scan starts then turns off for remainder of scan</string>
    <string name="aimingOff">Off</string>
    <string name="aimingOffText">Aiming target light stays off for duration of scan</string>
    <string name="aimingOn">On</string>
    <string name="aimingOnText">Aiming target light stays on for timed duration, may stay on past completion of scan</string>
    <string name="aimingScan">Scan</string>
    <string name="aimingScanText">Aiming target light stays on for duration of scan</string>
    <string name="trigger">Trigger</string>
    <string name="triggerManual">Manual</string>
    <string name="triggerManualText">Manual scan triggered by button or software command</string>
    <string name="triggerAuto">Auto</string>
    <string name="triggerAutoText">Capture trigger starts continuous scanning automatically sending barcodes as their found. Must be manually stopped. Hardware trigger will start the scan but will not stop it.</string>
    <string name="triggerContinueScan">Continuous</string>
    <string name="triggerContinueScanText">not sure</string>
    <string name="triggerOnceAutoScan">Once Continuous Auto Scan</string>
    <string name="triggerOnceAutoScanText">not sure</string>
    <string name="scanStart">Scan Start</string>
    <string name="scanStop">Scan Stop</string>
    <string name="scanAuto">Automatic</string>
    <string name="scanContinuous">Continuous</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="sensitivityLow">Sensitivity Low</string>
    <string name="sensitivityLowText">not sure</string>
    <string name="sensitivityNormal">Sensitivity Normal</string>
    <string name="sensitivityNormalText">not sure</string>
    <string name="sensitivityHigh">Sensitivity High</string>
    <string name="sensitivityHighText">not sure</string>
    <string name="sensitivityHigher">Sensitivity Higher</string>
    <string name="sensitivityHigherText">not sure</string>
    <string name="sensitivitySet">Sensitivity Set Value</string>
    <string name="sensitivitySetText">not sure</string>
    <string name="sensitivitySetValue">Sensitivity Value</string>
    <string name="communications">Communications</string>
    <string name="hardware">Hardware</string>
    <string name="barcode1d">Barcode 1D</string>
    <string name="barcode">Barcode</string>
    <string name="query">Query</string>
    <string name="settings">Settings</string>
    <string name="ocr">OCR</string>
    <string name="date">Date</string>
    <string name="serialnumber">Serial Num</string>
    <string name="esn">ESN</string>
    <string name="version">Version</string>
    <string name="duplicate">Duplicate</string>
    <string name="code39length">Code 39 Length</string>
    <string name="triggerdelay">Trigger Delay</string>
    <string name="triggertitle">Trigger Settings</string>
    <string name="idletosleep">Idle to Sleep</string>
    <string name="nogoodresponse">No Good Response</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="resetdefaults">Restore Defaults</string>
    <string name="selfprefix">Self Prefix</string>
    <string name="suffixchar">Suffix character</string>
    <string name="aim">Aim</string>
    <string name="codeid">Code ID</string>
    <string name="codeid39">Code ID for Code 39</string>
    <string name="selfsuffixprefix">Self Suffix,Prefix</string>
    <string name="lightandaim">Light and Aim mode</string>
    <string name="barcode1dstate">1D Barcode State</string>
    <string name="barcode2dstate">2D Barcode State</string>
    <string name="prefixsuffix">Prefix/Suffix</string>
    <string name="prefixsuffixOn">Prefix/Suffix enabled</string>
    <string name="prefixsuffixOff">Prefix/Suffix disabled</string>
    <string name="test">Test</string>
    <string name="stresscommand">Command Stress</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="device">Device</string>
    <string name="JE222">Honeywell N5600</string>
    <string name="JE227">Zebra SE4757 USB</string>
    <string name="JE227Serial">Zebra SE4757 SSI</string>
    <string name="SE4757">Zebra SE4757 CSI</string>
    <string name="EA30">Intermec EA30</string>
    <string name="EM3070">Newland EM3070</string>
    <string name="disable_decode_data">Disable Decode Data</string>
    <string name="enable_decode_data">Enable Decode Data</string>
    <string name="decode_data">DECODE DATA</string>
    <string name="decode_data_string">Decode Data</string>
    <string name="aimcodeid">Aim Code ID</string>
    <string name="symbolcodeid">Symbol Code ID</string>
    <string name="resetcodeid">Reset Code ID</string>
    <string name="swHandshaking">SW Handshaking</string>
    <string name="optiondevice">Device</string>
    <string name="optionformat">Format</string>
    <string name="optionlighting">Lighting</string>
    <string name="barcodedefaultformat">barcode</string>
    <string name="formatNone">None</string>
    <string name="formatAim">Aim</string>
    <string name="formatSymbol">Symbol</string>
    <string name="aimSymbolTitle">Aim/Symbol</string>
    <string name="suffixPrefixTitle">Prefix/Suffix</string>
    <string name="formatSuffixPrefixNone">None</string>
    <string name="formatSuffix">Suffix</string>
    <string name="formatPrefix">Prefix</string>
    <string name="formatSuffixPrefixBoth">Both</string>
    <string name="PrefixCharValue">Prefix Value</string>
    <string name="SuffixCharValue">Suffix Value</string>
    <string name="set_value">Set</string>
    <string name="cr">10</string>
    <string name="barcodeAllTitle">Barcode Common Settings</string>
    <string name="barcodeTitleG">Barcode Name</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="minmaxtitle">Minimum and maximum barcode length</string>
    <string name="transmitcheckdigit">Check digit transmit</string>
    <string name="validatecheckdigit">Check digit validate</string>
    <string name="checkdigittitle">Check digit options</string>
    <string name="checkdigitdisable">Disabled</string>
    <string name="checkdigitvalidate">Validate</string>
    <string name="checkdigitvalidateTransmit">Validate and Transmit</string>
    <string name="raw">Raw</string>
    <string name="goodcommand">Good Command</string>
    <string name="goodquery">Good Query</string>
    <string name="badcommand">Bad Command</string>
    <string name="audio">Audio</string>
    <string name="haptic">Haptic</string>
    <string name="hapticenable">Enable haptic feed back</string>
    <string name="hapticedurationtitle">Haptic feed back duration in ms</string>
    <string name="range0">0 to 254</string>
    <string name="supportTitle">Is Support test results</string>
    <string name="supportedcommand">Supported tests</string>
    <string name="power">Power</string>
    <string name="PowerTimeoutValue">Power Timeout Delay</string>
    <string name="PowerForceSleepTitle">Power Force Sleep</string>
    <string name="PowerForceSleep">Sleep</string>
    <string name="supported">Supported</string>
    <string name="unsupported">Unsupported</string>
</resources>