<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcodeTitleG"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/unsupported" />

        <Switch
            android:id="@+id/togBtnEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="State"
            android:textOff="@string/disable"
            android:textOn="@string/enable" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtMinMaxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minmaxtitle" />
    
    <LinearLayout
        android:id="@+id/layoutLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editTextMin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/minimum"
            android:inputType="number"
            android:text="@string/empty" />

        <EditText
            android:id="@+id/editTextMax"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/maximum"
            android:inputType="number"
            android:text="@string/empty" />

        <Button
            android:id="@+id/btnSetLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set" />
    </LinearLayout>
    
    
         <TextView
            android:id="@+id/txtcheckdigittitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/checkdigittitle" />
    
            <RadioGroup
                android:id="@+id/radioGroupCheckDigit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioButtonCheckDigitDisable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/checkdigitdisable" />

            <RadioButton
                android:id="@+id/radioButtonCheckDigitValidate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkdigitvalidate" />

            <RadioButton
                android:id="@+id/radioButtonCheckDigitValidateTransmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/checkdigitvalidateTransmit" />

        </RadioGroup>
    
    

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:color/white" />

</LinearLayout>