<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/cbHapticEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hapticenable" />
    
   <TextView
        android:id="@+id/txtHapticDurationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hapticedurationtitle" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editTextHapticDuration"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/range0"
            android:inputType="number"
            android:text="@string/empty" />

        <Button
            android:id="@+id/btnSetHapticDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set" />
    </LinearLayout>

</LinearLayout>