<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
            <TextView
                android:id="@+id/txtPowerTimeoutValueTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PowerTimeoutValue" >
            </TextView>

            <EditText
                android:id="@+id/txtTimeoutValue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="numberDecimal"
                android:text="@string/empty" />
            
            <Button
                android:id="@+id/btnSetTimeoutValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_value" />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:color/white" />
            
            <TextView
                android:id="@+id/txtPowerForceSleepTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PowerForceSleepTitle" >
            </TextView>

            
            <Button
                android:id="@+id/btnForceSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PowerForceSleep" />
        
	</LinearLayout>
</ScrollView>
